# rust-projects-workspace

./: .gitignore  .rustfmt.toml  Cargo.toml  stub
.cargo/: config.toml
aoc-2024/: aoc-2024.md
aoc-2024/day-10/: Cargo.toml
aoc-2024/day-10/src/: lib.rs  main.rs
aoc-2024/day-11/: Cargo.toml
aoc-2024/day-11/src/: lib.rs  main.rs
aoc-2024/day-12/: Cargo.toml
aoc-2024/day-12/src/: lib.rs  main.rs
aoc-2024/day-17/: Cargo.toml
aoc-2024/day-17/src/: inputs.rs  lib.rs  main.rs
aoc-2024/day-18/: Cargo.toml
aoc-2024/day-18/src/: input.rs  lib.rs
aoc-2024/day-19/: Cargo.toml
aoc-2024/day-19/src/: inputs.rs  lib.rs  main.rs
aoc-2024/day-20/: Cargo.toml
aoc-2024/day-20/src/: lib.rs
aoc-2024/template/: Cargo.toml
aoc-2024/template/src/: lib.rs  main.rs
nannou/graph_visualizer/: Cargo.toml
nannou/graph_visualizer/src/: main.rs
nannou/sketch1/: Cargo.toml
nannou/sketch1/src/: main.rs
nannou_sketches/: Cargo.toml
nannou_sketches/src/: graph_visualizer.rs  main.rs  sketch1.rs
nannou_sketches/src/lib/: gallileo.rs  gallileo_ai.rs  graph.rs  mod.rs
side-projects/dr-tree/: Cargo.toml
side-projects/dr-tree/src/: main.rs  tree_ideas.md
side-projects/folder_cleaner/: Cargo.toml  readme.md
side-projects/folder_cleaner/src/: args.rs  main.rs
side-projects/index-benchmark/: Cargo.toml  ideas.md  readme.md  results - default strings.txt
side-projects/index-benchmark/src/: collections.rs  main.rs  nvm.rs  trallocator.rs
side-projects/my_macros/: Cargo.toml
side-projects/my_macros/src/: lib.rs
side-projects/p-find/: Cargo.toml  readme.md
side-projects/p-find/src/: main.rs
side-projects/random_data/: Cargo.toml  readme.md
side-projects/random_data/src/: lib.rs
side-projects/recursive_huffman/: Cargo.toml
side-projects/recursive_huffman/data/: bikes.html  notes.txt  smol.txt
side-projects/recursive_huffman/src/: huffman.rs  lib.rs  tree.rs
side-projects/simd-stuff/: Cargo.toml  neat.md  readme.md
side-projects/simd-stuff/src/: horizontal.rs  lib.rs  sorting.rs
side-projects/trees/: Cargo.toml  simd_notes.md
side-projects/trees/src/: main.rs  readme.md  s_tree_planning.md  testing_idea.txt  tree_ideas.md
side-projects/trees/src/modules/: br_tree.rs  eytzinger.rs  mod.rs  s_tree.rs  simd_tree.rs
