[workspace]

members = ["aoc-2024/day-10", 
    "aoc-2024/day-11", 
    "aoc-2024/day-12", 
    "aoc-2024/day-17", 
    "aoc-2024/day-18",
    "aoc-2024/day-19",
    "aoc-2024/day-20", "side-projects/dr-tree", "side-projects/index-benchmark", "side-projects/p-find", "side-projects/table"]
resolver = "2"
