[package]
name = "nannou_sketches"
version = "0.1.0"
edition = "2024"

[dependencies]
nannou = "0.19.0"
petgraph = "0.8.2"
rapier3d = "0.29.0"

[[example]]
path="src/graph_visualizer.rs"
name="graph_visualizer"

[[example]]
path="src/sketch1.rs"
name="sketch1"

[lib]
path="src/lib/mod.rs"
name="lib"
