[package]
name = "day-18"
version = "0.1.0"
edition = "2021"

[lib]
name = "library"
path = "src/lib.rs"

[[bin]]
name = "binary"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.94", features = ["backtrace"] }
ndarray = { version = "0.16.1", features = ["rayon"] }
pathfinding = "4.12.0"
rayon = "1.10.0"
