[package]
name = "index-benchmark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "binary"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.94", features = ["backtrace"] }
array_list = "0.3.0"
pstr = "0.7.0"
radix_trie = "0.2.1"
rand = { version = "0.8.5" }
rayon = "1.10.0"
rudy = "0.1.0"
smartstring = "1.0.1"
sorted-vec = "0.8.5"
